--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,20 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".TelaLogin"
-            android:label="@string/app_name">
+
+        <activity android:name=".SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TelaPrincipal"></activity>
+
+        <activity android:name=".TelaLogin"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity android:name=".TelaPrincipal"/>
+
     </application>
 
 </manifest>
