--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.koushikdutta.ion:ion:2.1.9'
 }
