--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".TelaLogin"
             android:theme="@style/AppTheme.NoActionBar"/>
 
-        <activity android:name=".TelaPrincipal"/>
+        <activity android:name=".TelaPrincipal"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
